Changelog
=========

1.1.2 (unreleased)
------------------

- Nothing changed yet.


1.1.1 (2013-09-26)
------------------

- Add permission for Site Administrator.


1.1.0 (2013-09-26)
------------------

- Add subsciber, after creation of a doclegis, this one is exclude from nav.
- Delete a coma in javascipt for a IE8 bug.
- Use publication date for year research.

1.0.10 (2013-09-24)
-------------------

- Nothing changed yet.


1.0.9 (2013-09-24)
------------------

- Do not use strftime anymore.


1.0.8 (2013-09-02)
------------------

- Load datatables only for #doclegisTable.


1.0.7 (2013-08-27)
------------------

- added class to H1
- added classes to all divs
- changed order of div Numero ou ID 


1.0.6 (2013-08-26)
------------------

- Fix themes vocabulary


1.0.5 (2013-08-26)
------------------

- Use default date.


1.0.4 (2013-08-26)
------------------

- Sorting select
- Add transalations


1.0.3 (2013-08-23)
------------------

- Add simple doclegis object view.


1.0.2 (2013-08-23)
------------------

- Renamed js and css.


1.0.1 (2013-08-22)
------------------

- Nothing changed yet.


1.0 (2013-08-22)
----------------

- Created recipe with ZopeSkel
  [Benoit Suttor]